--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,14 @@ jobs:
 
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - gradle-dependencies-{{ checksum "build.gradle" }}
+            # fallback to using the latest cache if no exact match is found
+            - gradle-dependencies-
+      - run: ./gradlew dependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: gradle-dependencies-{{ checksum "build.gradle" }}
       - run: ./gradlew check
