--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 plugins {
 	id 'org.springframework.boot' version '2.2.0.BUILD-SNAPSHOT'
 	id 'java'
+	id 'jacoco'
+	id 'checkstyle'
+	id 'org.sonarqube' version '2.7'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -24,6 +27,47 @@ dependencies {
 	}
 }
 
+jacoco {
+	toolVersion = '0.8.3'
+}
+
+checkstyle {
+    toolVersion '7.8.1'
+	configFile = file('.circleci/checkstyle.xml')
+}
+checkstyleMain {
+    source = 'src/main/java'
+}
+checkstyleTest {
+    source = 'src/test/java'
+}
+
+sonarqube {
+	properties {
+	}
+}
+
 test {
 	useJUnitPlatform()
 }
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+		html.enabled true
+        csv.enabled false
+    }
+}
+
+jacocoTestReport.dependsOn test
+
+tasks.withType(Checkstyle) {
+    reports {
+        xml.enabled true
+        html.enabled true
+    }
+}
+
+
+
+
